# carcass

./: .clippy.toml  .deny.toml  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE.md  README.md  flake.nix
aux/: Cargo.toml  README.md
auxvec/: Cargo.toml  README.md  mod.rs
brand/: README.md
cab/: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  __cab__.nix  __project__.nix  lib.rs  main.rs  mod.rs
cab/cab/: Cargo.toml
cab/cab-error/: Cargo.toml  error.rs  lib.rs
cab/cab-format/: Cargo.toml
cab/cab-format/src/: color.rs  document.rs  indent.rs  lib.rs  style.rs  tag.rs  view.rs  width.rs  wrap.rs
cab/cab-island/: Cargo.toml  blob.rs  fs.rs  lib.rs  stdin.rs
cab/cab-island/src/: blob.rs  fs.rs  lib.rs  stdin.rs
cab/cab-report/: Cargo.toml
cab/cab-report/src/: error.rs  label.rs  lib.rs  point.rs  position.rs  report.rs
cab/cab-runtime/: Cargo.toml  code.rs  lib.rs  operation.rs
cab/cab-runtime/compiler/: mod.rs  optimizer.rs  scope.rs
cab/cab-runtime/src/: code.rs  compile.rs  constant.rs  island.rs  lib.rs  operation.rs  scope.rs  thunk.rs  value.rs
cab/cab-runtime/src/compiler/: mod.rs  optimizer.rs  scope.rs
cab/cab-runtime/src/value/: attributes.rs  mod.rs  path.rs  thunk.rs
cab/cab-runtime/src/value/path/: mod.rs
cab/cab-runtime/value/: attributes.rs  mod.rs  thunk.rs
cab/cab-runtime/value/path/: blob.rs  fs.rs  mod.rs  standard.rs
cab/cab-span/: Cargo.toml  lib.rs  size.rs  span.rs
cab/cab-span/src/: lib.rs  size.rs  span.rs
cab/cab-syntax/: Cargo.toml  lib.rs  node.rs  noder.rs  segment.rs  token.rs  tokenizer.rs
cab/cab-syntax/src/: color.rs  format.rs  lib.rs  node.rs  noder.rs  segment.rs  token.rs  tokenizer.rs
cab/cab-task/: Cargo.toml  main.rs
cab/cab-task/src/: main.rs
cab/cab-util/: Cargo.toml  lazy.rs  lib.rs
cab/cab-util/src/: lib.rs  reffed.rs
cab/cab-why/: Cargo.toml
cab/cab-why/src/: error.rs  lib.rs
cab/cab-why/src/print/: indent.rs  mod.rs  wrap.rs
cab/cab-why/src/report/: label.rs  mod.rs  point.rs  position.rs
cab/cab-why/src/text/: mod.rs  size.rs  span.rs
cab/cab/src/: lib.rs  main.rs
cab/error/: Cargo.toml  error.rs  mod.rs
cab/fuzz/: Cargo.toml  noder.rs  parser.rs  tokenizer.rs
cab/runtime/: Cargo.toml  code.rs  mod.rs  operation.rs  prelude.cab  scope.rs  state.rs
cab/runtime/compiler/: mod.rs  optimizer.rs  scope.rs
cab/runtime/value/: attributes.rs  cons.rs  error.rs  integer.rs  location.rs  mod.rs  string.rs  thunk.rs
cab/runtime/value/path/: blob.rs  fs.rs  mod.rs  standard.rs
cab/span/: Cargo.toml  size.rs
cab/syntax/: Cargo.toml  lode.rs  loder.rs  mod.rs  node.rs  noder.rs  segment.rs  token.rs  tokenizer.rs
cab/task/: Cargo.toml  main.rs
cab/util/: lazy.rs  mod.rs  paired.rs  reffed.rs  suffix.rs
con/: Cargo.toml  address.rs  behaviour.rs  config.rs  interface.rs  ip.rs  main.rs  mod.rs  vpn.rs
cst/: Cargo.toml
cyn/: Cargo.toml  mod.rs
dup/: .gitignore  Cargo.toml  README.md  mod.rs
dup/dup-macros/: Cargo.toml  mod.rs
dup/macros/: mod.rs
fuzz/: Cargo.toml
nix/: __cargo__.nix  __overlays__.nix  __projects__.nix
radicle-ci-nix/: Cargo.toml  __project__.nix  broker.rs  config.rs  main.rs  message.rs  nix.rs
ranged/: Cargo.toml  mod.rs  size.rs  span.rs
route67/: .envrc  Cargo.toml  README.md  __project__.nix  address.rs  config.rs  dns.rs  interface.rs  ip.rs  main.rs  mod.rs  socket.rs
ust/: .gitignore  Cargo.toml  lib.rs  mod.rs  report.rs  style.rs
ust/src/: color.rs  lib.rs  report.rs  style.rs  terminal.rs
ust/src/terminal/: indent.rs  mod.rs  tag.rs
ust/terminal/: indent.rs  mod.rs  tag.rs
