[package]
name        = "auxvec"
description = "Auxiliary vector (auxv) reader and modifier."
license     = "MPL-2.0"
categories  = [ "os::unix-apis" ]
keywords    = [ "elf", "auxiliary", "vector", "auxv", "auxval" ]
repository  = "https://github.com/cull-os/carcass/tree/master/auxvec"
version     = "0.0.4"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
num_enum.workspace    = true
