[package]
name                 = "cab"
description          = "A reproducible contextful-expression language"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[[bin]]
name = "cab"
path = "main.rs"

[lints]
workspace = true

[dependencies]
cab-error.path   = "./cab-error"
cab-runtime.path = "./cab-runtime"
cab-span.path    = "./cab-span"
cab-syntax.path  = "./cab-syntax"

dup.path = "../dup"
ust.path = "../ust"

clap.workspace  = true
rpds.workspace  = true
tokio.workspace = true
