[package]
name                 = "cab"
description          = "A reproducible contextful-expression language"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[[bin]]
name = "cab"
path = "main.rs"

[lints]
workspace = true

[dependencies]
cab-runtime.path = "./runtime"
cab-syntax.path  = "./syntax"
cab-util.path    = "./util"

cyn.path    = "../cyn"
dup.path    = "../dup"
ranged.path = "../ranged"
ust.path    = "../ust"

clap.workspace  = true
rpds.workspace  = true
tokio.workspace = true
