[package]
name        = "cab"
description = "A reproducible contextful-expression language"
license     = "MPL-2.0"
repository  = "https://radicle.network/nodes/iris.radicle.network/rad:z2AeopTVY58JJSJC3zroqEV5T3pNp/tree/cab"
version     = "0.0.1"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[[bin]]
name = "cab"
path = "main.rs"

[lints]
workspace = true

[dependencies]
cab-runtime.path = "./runtime"
cab-syntax.path  = "./syntax"
cab-util.path    = "./util"

cyn.path    = "../cyn"
dup.path    = "../dup"
ranged.path = "../ranged"
ust.path    = "../ust"

clap.workspace  = true
rpds.workspace  = true
tokio.workspace = true
