[package]
name       = "cyn"
license    = "MPL-2.0"
repository = "https://github.com/cull-os/carcass/tree/master/cyn"
publish    = true
version    = "0.0.1"

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
dup      = { features = [ "rpds" ], path = "../dup" }
ust.path = "../ust"

rpds.workspace = true
