[package]
name        = "cyn"
description = "Chain of values"
license     = "MPL-2.0"
categories  = [ "rust-patterns" ]
keywords    = [ "error", "chain" ]
repository  = "https://github.com/cull-os/carcass/tree/master/cyn"
version     = "0.0.1"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
dup      = { features = [ "rpds" ], path = "../dup" }
ust.path = "../ust"

rpds.workspace = true
