[package]
name        = "cyn"
description = "Chain of values"
license     = "MPL-2.0"
categories  = [ "rust-patterns" ]
keywords    = [ "error", "chain" ]
repository  = "https://radicle.network/nodes/seed.radicle.garden/rad:z2AeopTVY58JJSJC3zroqEV5T3pNp/tree/cyn"
version     = "0.0.1"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
dup      = { features = [ "rpds" ], path = "../dup" }
ust.path = "../ust"

rpds.workspace = true
