[package]
name        = "dup"
description = "Cheap clone trait for distinguishing expensive clones from things that should have been Copy"
license     = "MPL-2.0"
repository  = "https://github.com/cull-os/carcass/tree/master/dup"
publish     = true
version     = "0.1.0"

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[features]
arcstr = [ "dep:arcstr" ]
bytes  = [ "dep:bytes" ]
cstree = [ "dep:cstree" ]
rpds   = [ "dep:rpds", "dep:archery" ]

[dependencies]
dup-macros.path = "./macros"

arcstr = { optional = true, workspace = true }

bytes = { optional = true, workspace = true }

cstree = { optional = true, workspace = true }

archery = { optional = true, workspace = true }
rpds    = { optional = true, workspace = true }
