[package]
name        = "dup"
description = "Cheap clone trait for distinguishing expensive clones from things that should have been Copy"
license     = "MPL-2.0"
categories  = [ "rust-patterns" ]
keywords    = [ "dupe", "arc", "clone", "cheap" ]
repository  = "https://radicle.network/nodes/iris.radicle.network/rad:z2AeopTVY58JJSJC3zroqEV5T3pNp/tree/dup"
version     = "0.1.0"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[features]
arcstr    = [ "dep:arcstr" ]
bytes     = [ "dep:bytes" ]
cstree    = [ "dep:cstree" ]
libp2p    = [ "dep:libp2p" ]
multiaddr = [ "dep:multiaddr" ]
rpds      = [ "dep:rpds", "dep:archery" ]
tokio     = [ "dep:tokio" ]

[dependencies]
dup-macros.path = "./macros"

arcstr = { optional = true, workspace = true }

bytes = { optional = true, workspace = true }

cstree = { optional = true, workspace = true }

libp2p = { optional = true, workspace = true }

multiaddr = { optional = true, workspace = true }

archery = { optional = true, workspace = true }
rpds    = { optional = true, workspace = true }

tokio = { optional = true, workspace = true }
