[package]
name                 = "fuzz"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
cab.path = "../cab/cab"

libfuzzer-sys.workspace = true

[[bin]]
bench = false
doc   = false
name  = "cab-tokenizer"
path  = "../cab/fuzz/tokenizer.rs"
test  = false

[[bin]]
bench = false
doc   = false
name  = "cab-noder"
path  = "../cab/fuzz/noder.rs"
test  = false
