[package]
name        = "ranged"
description = "Small span and size types"
license     = "MPL-2.0"
categories  = [ "rust-patterns" ]
keywords    = [ "size", "span" ]
repository  = "https://github.com/cull-os/carcass/tree/master/ranged"
version     = "0.1.0"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[features]
cstree = [ "dep:cstree" ]

[dependencies]
cab-util.path = "../cab/util"

cstree = { optional = true, workspace = true }

derive_more.workspace = true
