[package]
name        = "route67"
description = "True Mesh VPN"
license     = "MPL-2.0"
repository  = "https://github.com/cull-os/carcass/tree/master/route67"
version     = "0.0.1"
publish     = true

authors.workspace = true
edition.workspace = true

[lib]
path = "mod.rs"

[[bin]]
name = "route67"
path = "main.rs"

[lints]
workspace = true

[dependencies]
cyn.path = "../cyn"
dup.path = "../dup"
ust.path = "../ust"

asynchronous-codec.workspace = true
bytes.workspace = true
clap.workspace = true
derive_more.workspace = true
either.workspace = true
heck.workspace = true
hostname.workspace = true
libp2p = { features = [
  "dcutr",
  "ed25519",
  "identify",
  "kad",
  "macros",
  "noise",
  "ping",
  "quic",
  "relay",
  "tcp",
  "tokio",
  "yamux",
], workspace = true }
multibase.workspace = true
ringbuf.workspace = true
rustc-hash.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tun-rs.workspace = true
