[package]
name              = "ust"
description       = "Universal styling"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish           = true
categories        = [ "command-line-interface", "game-development", "graphics", "web-programming" ]
keywords          = [ "styling", "color", "terminal", "ansi", "universal" ]
repository        = "https://github.com/cull-os/carcass/tree/master/ust"
version           = "0.0.2"

[lints]
workspace = true

[dependencies]
cab-span.path = "../cab/cab-span"
cab-util.path = "../cab/cab-util"

const-str.workspace            = true
derive_more.workspace          = true
enumflags2.workspace           = true
itertools.workspace            = true
itoa.workspace                 = true
num.workspace                  = true
smallvec.workspace             = true
terminal_size.workspace        = true
unic-emoji-char.workspace      = true
unicode-segmentation.workspace = true
unicode-width.workspace        = true
