[package]
name        = "ust"
description = "Universal styling"
categories  = [ "command-line-interface", "game-development", "graphics", "web-programming" ]
keywords    = [ "styling", "color", "terminal", "ansi", "universal" ]
repository  = "https://github.com/cull-os/carcass/tree/master/ust"
version     = "0.0.2"
publish     = true

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
cab-span.path = "../cab/span"

const-str.workspace            = true
derive_more.workspace          = true
enumflags2.workspace           = true
itertools.workspace            = true
itoa.workspace                 = true
num.workspace                  = true
smallvec.workspace             = true
terminal_size.workspace        = true
unic-emoji-char.workspace      = true
unicode-segmentation.workspace = true
unicode-width.workspace        = true
