[package]
name                 = "cab-error"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
ust.path = "../../ust"

anyhow.workspace      = true
const-str.workspace   = true
derive_more.workspace = true
smallvec.workspace    = true
thiserror.workspace   = true
