[package]
name                 = "cab-format"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
cab-span.path = "../cab-span"
cab-util.path = "../cab-util"

derive_more.workspace          = true
num.workspace                  = true
scopeguard.workspace           = true
terminal_size.workspace        = true
unic-emoji-char.workspace      = true
unicode-segmentation.workspace = true
unicode-width.workspace        = true
yansi.workspace                = true
