[package]
name                 = "cab-island"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab-report.path = "../cab-report"

async-once-cell.workspace = true
async-trait.workspace     = true
bytes.workspace           = true
tokio.workspace           = true
