[package]
name                 = "cab-island"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
cab-error.path = "../cab-error"
cab-util.path  = "../cab-util"

async-once-cell.workspace = true
async-trait.workspace     = true
bytes.workspace           = true
tokio.workspace           = true
