[package]
name                 = "cab-runtime"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
cab-report.path = "../cab-report"
cab-span.path   = "../cab-span"
cab-syntax.path = "../cab-syntax"

ust.path = "../../ust"

async-trait.workspace = true
bytes.workspace       = true
const-str.workspace   = true
derive_more.workspace = true
num.workspace         = true
num_enum.workspace    = true
rpds.workspace        = true
rustc-hash.workspace  = true
smallvec.workspace    = true
tokio.workspace       = true
vu128.workspace       = true
