[package]
name                 = "cab-span"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
cab-util.path = "../cab-util"

cstree.workspace      = true
derive_more.workspace = true
