[package]
name                 = "cab-syntax"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
cab-report.path = "../cab-report"
cab-span.path   = "../cab-span"
cab-util.path   = "../cab-util"

ust.path = "../../ust"

cstree.workspace      = true
derive_more.workspace = true
enumset.workspace     = true
num.workspace         = true
paste.workspace       = true
peekmore.workspace    = true
phf.workspace         = true
smallvec.workspace    = true
