[package]
name                 = "cab-task"
authors.workspace = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
cab.path = "../cab"

ust.path = "../../ust"

clap.workspace  = true
tokio.workspace = true
which.workspace = true
