[package]
name                 = "cab-util"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "lib.rs"

[lints]
workspace = true

[dependencies]
paste.workspace = true
