[package]
name                 = "cab-why"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[features]
default = [ "error" ]
error   = [ "dep:anyhow", "dep:thiserror" ]

[dependencies]
anyhow.optional     = true
anyhow.workspace    = true
thiserror.optional  = true
thiserror.workspace = true

const-str.workspace            = true
cstree.workspace               = true
scopeguard.workspace           = true
smallvec.workspace             = true
terminal_size.workspace        = true
unicode-segmentation.workspace = true
unicode-width.workspace        = true
yansi.workspace                = true
