[package]
name                 = "cab"
description          = "A reproducible contextful-expression language"
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[dependencies]
cab-format.path  = "../cab-format"
cab-island.path  = "../cab-island"
cab-report.path  = "../cab-report"
cab-runtime.path = "../cab-runtime"
cab-span.path    = "../cab-span"
cab-syntax.path  = "../cab-syntax"

clap.workspace  = true
tokio.workspace = true
