[package]
name                 = "cab-error"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lib]
path = "mod.rs"

[lints]
workspace = true

[dependencies]
dup.path = "../../dup"
ust.path = "../../ust"

rpds.workspace        = true
