[package]
name                 = "fuzz"
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
cab.path = "../"

ust.path = "../../ust"

libfuzzer-sys.workspace = true
rpds.workspace          = true

[[bin]]
bench = false
doc   = false
name  = "tokenizer"
path  = "./tokenizer.rs"
test  = false

[[bin]]
bench = false
doc   = false
name  = "noder"
path  = "./noder.rs"
test  = false

